k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: server-monitor-service

spec:
  selector:
    app: server-monitor
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
