k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: server-monitor-ingress

spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: server-monitor-service
            port:
              number: 80
